nextcloud/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  serviceName: nextcloud
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:28
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nextcloud-data
          mountPath: /var/www/html
    volumes:
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-data
